# ferrite

./: .gitignore  Cargo.toml  Makefile  README.md
benches/: evaluation_bench.rs  search_bench.rs
src/: evaluation.rs  lib.rs  main.rs  movegen.rs  pst.rs  search.rs  syzygy.rs  time.rs  tt.rs  types.rs  uci.rs
src/board/: attacks.rs  bitboard.rs  board.rs  chessmove.rs  magic.rs  mod.rs  movegen.rs  piece.rs  square.rs  zobrist.rs
tests/: bk_suite.rs
